.provarCaches/00D1q0000008b5bEAA/objects/User.object
<CustomObject>
    <fields>
        <fullName>xcdhcm__Allow_Name_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Name Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Approver__c</fullName>
        <label>xApprover</label>
        <relationshipName>HolidayApprover</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Department_ID__c</fullName>
        <label>Department ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__End_Date__c</fullName>
        <description>Employee&apos;s last working day or leaving date - after this date the record will no longer show on the team chart</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Generate_new_password__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box sends the User an email with login details. Note these login details will expire after 72 hours</inlineHelpText>
        <label>Generate new password and notify user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Has_reportees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has reportees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__In_my_department__c</fullName>
        <formula>IF(NOT(ISBLANK($User.xcdhcm__Department_ID__c)),
$User.xcdhcm__Department_ID__c=xcdhcm__Department_ID__c,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In my department?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__In_my_team__c</fullName>
        <formula>OR(ManagerId=$User.ManagerId,Id=$User.ManagerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In my team?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Location__c</fullName>
        <description>Records Employee location from Job role.  Used in Calendar filter</description>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager_detail__c</fullName>
        <description>Records Manager name to provide a record without a hyperlink</description>
        <formula>Manager.FirstName&amp;&quot; &quot;&amp;Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__My_reportees_user_ids__c</fullName>
        <description>used for Manager circular loop, 

stores the user id of all the users who report to me.</description>
        <label>My reportees user ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Profile_image__c</fullName>
        <description>This will store employee Profile image.</description>
        <label>Profile image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Start_Date__c</fullName>
        <description>Records start date - after this point User appears in Team chart</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Upward_reporting_line__c</fullName>
        <formula>IF(ISBLANK(Manager.Id),&quot;&quot;, 
IF(ISBLANK(Manager.Manager.Id ), xcdhcm__Manager_detail__c, 
IF(ISBLANK(Manager.Manager.Manager.Id ),xcdhcm__Manager_detail__c &amp; &quot;, &quot;&amp; Manager.xcdhcm__Manager_detail__c, 
IF(ISBLANK( Manager.Manager.Manager.Id),xcdhcm__Manager_detail__c &amp; &quot;, &quot;&amp; Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.xcdhcm__Manager_detail__c, 
IF(ISBLANK( Manager.Manager.Manager.Manager.Id),xcdhcm__Manager_detail__c &amp; &quot;, &quot;&amp; Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.xcdhcm__Manager_detail__c, 
IF(ISBLANK( Manager.Manager.Manager.Manager.Manager.Id),xcdhcm__Manager_detail__c &amp; &quot;, &quot;&amp; Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c, 
IF(ISBLANK( Manager.Manager.Manager.Manager.Manager.Manager.Id),xcdhcm__Manager_detail__c &amp; &quot;, &quot;&amp; Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c, 
IF(ISBLANK( Manager.Manager.Manager.Manager.Manager.Manager.Manager.Id),xcdhcm__Manager_detail__c &amp; &quot;, &quot;&amp; Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c, 
IF(ISBLANK( Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Id),xcdhcm__Manager_detail__c &amp; &quot;, &quot;&amp; Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c, 
IF(ISBLANK( Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Id),xcdhcm__Manager_detail__c &amp; &quot;, &quot;&amp; Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c&amp; &quot;, &quot;&amp; Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.xcdhcm__Manager_detail__c, 
&quot;More than 10 management tiers - formula needs updating&quot; 
))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upward reporting line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__UserRole__c</fullName>
        <description>Records the profile name, which is then presented on Job role</description>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__User__c</fullName>
        <description>Field is used to designate whether an Employee record is visible in the Team Chart and in other controllers. Normally this field value will be active when a User has an active licence.</description>
        <inlineHelpText>Use field to designate whether a User record is visible in the Team Chart and in other controllers</inlineHelpText>
        <label>HR user status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_mobile__c</fullName>
        <description>Display mobile no from user</description>
        <label>Work mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__empDetail_Id__c</fullName>
        <description>empDetail_Id stores this users employee detail record id (Record  identifier value). This value is used in team chart page.</description>
        <label>empDetail_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <label>Active Users</label>
        <language>en_GB</language>
        <sharedTo>
            <group>HR_Administrator</group>
            <group>Payroll_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <label>Admin Users</label>
        <language>en_GB</language>
        <sharedTo>
            <group>HR_Administrator</group>
            <group>Payroll_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>xcdhcm__Manager_detail__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_GB</language>
        <sharedTo>
            <group>HR_Administrator</group>
            <group>Payroll_Administrators</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Change_In_Name</fullName>
        <active>true</active>
        <description>User&apos;s first and last names should be changed using Change Name button on Personal.</description>
        <errorConditionFormula>CONTAINS(Profile.Name,&apos;HRMS&apos;) &amp;&amp; NOT(xcdhcm__Allow_Name_Change__c) &amp;&amp; NOT(ISNEW()) &amp;&amp;  (PRIORVALUE( FirstName)&lt;&gt;FirstName ||  PRIORVALUE(  LastName )&lt;&gt;LastName )</errorConditionFormula>
        <errorMessage>Change names for HR users using the Change name button from personal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Only_Admins_can_change_User_record</fullName>
        <active>true</active>
        <description>Validation rule prevents Employees, Team Leaders and Managers from changing their own User record.Only HR Admins and Payroll Managers and Admins can do this</description>
        <errorConditionFormula>and( 
$Profile.Name  &lt;&gt;  &quot;HRMS Admin&quot;,
$Profile.Name  &lt;&gt;  &quot;System Administrator&quot;,
$Profile.Name  &lt;&gt;  &quot;HRMS System Admin&quot;, 
$Profile.Name &lt;&gt; &quot;HRMS Payroll Manager&quot;, 
$Profile.Name &lt;&gt; &quot;HRMS Payroll Administrator&quot;,
or( 
ISCHANGED( Alias ) , 
ISCHANGED( IsActive ) ,  
ISCHANGED( City ) , 
ISCHANGED( Country ) ,  
ISCHANGED( Email ) , 
ISCHANGED( xcdhcm__empDetail_Id__c ) , 
ISCHANGED( EmployeeNumber ) , 
ISCHANGED( xcdhcm__End_Date__c ) , 
ISCHANGED( EndDay ) , 
ISCHANGED( Extension ) , 
ISCHANGED( Fax ) , 
ISCHANGED( xcdhcm__Generate_new_password__c ) , 
ISCHANGED( xcdhcm__User__c ) , 
ISCHANGED( xcdhcm__Manager_detail__c ) , 
ISCHANGED( CommunityNickname ) , 
ISCHANGED( ProfileId ) , 
ISCHANGED( xcdhcm__Start_Date__c ) , 
ISCHANGED( State ) , 
ISCHANGED( StartDay ) , 
ISCHANGED( Street ) , 
ISCHANGED( Title ) , 
ISCHANGED( Id ) , 
ISCHANGED( Username ) , 
ISCHANGED( UserType ) , 
ISCHANGED( CompanyName ), 
ISCHANGED( Department ), 
ISCHANGED( Division ), 
ISCHANGED( Email ), 
ISCHANGED( xcdhcm__empDetail_Id__c ),
/* NPPD-1773
ISCHANGED( FirstName ), 
ISCHANGED( LastName ), */
ISCHANGED( xcdhcm__Manager_detail__c ), 
ISCHANGED( CommunityNickname ), 
ISCHANGED( Phone ), 
ISCHANGED( Title )) 

)</errorConditionFormula>
        <errorMessage>You may change your mobile phone number but other fields may only be changed by Administrators. If you would like to change a value please contact one of the HR team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Only_SystemAdmin_can_create_admin_record</fullName>
        <active>true</active>
        <description>Prevent admin profile from processing joiner for HRMS Admin or  HRMS system admin</description>
        <errorConditionFormula>AND
(
OR
(
$User.xcdhcm__UserRole__c = &apos;HRMS Admin&apos;,
$User.xcdhcm__UserRole__c = &apos;HRMS Payroll Administrator&apos;,
$User.xcdhcm__UserRole__c = &apos;HRMS Recruitment Administrator&apos;,
$User.xcdhcm__UserRole__c = &apos;HRMS Training Adminstrator&apos;,
$User.xcdhcm__UserRole__c = &apos;HRMS Trial Admin&apos;
),
OR
(
xcdhcm__UserRole__c = &apos;HRMS Admin&apos;,
xcdhcm__UserRole__c = &apos;HRMS Payroll Administrator&apos;,
xcdhcm__UserRole__c = &apos;HRMS Recruitment Administratorr&apos;,
xcdhcm__UserRole__c = &apos;HRMS System Admin&apos;,
xcdhcm__UserRole__c = &apos;HRMS Training Adminstrator&apos;,
xcdhcm__UserRole__c = &apos;HRMS Trial Admin&apos;,
xcdhcm__UserRole__c = &apos;System Administrator&apos;
)
)</errorConditionFormula>
        <errorMessage>Only HRMS System Administrators or System Administrators may create a user with an Administrator profile</errorMessage>
    </validationRules>
</CustomObject>